# imgui_webgpu

./: CMakeLists.txt  CMakePresets.json  application.cpp  application.hpp  texture.hpp  vcpkg.json
shaders/: prefix_scan.slang  prefix_scan.spv
tests/: CMakeLists.txt  shader_test.cpp  wgpu_helper.hpp
